# fhe-vs-mpc-4-ml

./: README.md
FHE/: README.md  pyproject.toml  requirements.txt
FHE/basic_layer_benchmarks/: gelu.py  matmul.py  relu.py  sigmoid.py
FHE/concrete_benchmarks/: cosine.py  l1.py  l2.py
FHE/hybrid_model_benchmarks/: client.py  deploy.py  server.py
FHE/model_benchmarks/: cnn.py  linear_regression.py  linear_trained.py  logistic_classification.py  mlp-trained.py  mlp.py  mlp_trained.py  random_forest_regressor.py
MPC/: .gitignore  README.md  benchmark_classic_cnn.py  benchmark_full_stats.py  benchmark_mobilefacenet.py  benchmark_primitive_ops.py  pyproject.toml  requirements.txt  run_nodes.py  utils.py
MPC/models/: __init__.py  generic.py  mobilefacenet.py
