[project]
name = "fhe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "concrete>=4.18.2",
    "concrete-ml>=1.9.0",
    "fastapi>=0.138.1",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.32",
    "setuptools>=75.3.0",
    "torch>=2.2.2",
    "uvicorn>=0.49.0",
]
