[project]
name = "mpc-inference-benchmarks"
version = "0.1.0"
description = "Benchmark harness comparing secure MPC (SPU/ABY3) vs. plaintext neural-network inference."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flax==0.8.4",
    "spu==0.9.3b0",
    "tqdm>=4.67.1",
    "psutil>=5.9",
    "pyrapl>=0.2.3.1",
]

# This repo is a runnable benchmark harness, not an installable library.
[tool.uv]
package = false
